k8s/coordinator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mandelbrot-coordinator
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: mandelbrot-coordinator
  ports:
    - port: 80
      targetPort: 80
