k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mandelbrot
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: mandelbrot
  ports:
    - port: 80
      targetPort: 80
